Pre-evalution task completed

--- a/spring-boot-rest-api/src/app/update-student/update-student.component.html
+++ b/spring-boot-rest-api/src/app/update-student/update-student.component.html
@@ -2,7 +2,7 @@
 
 <div class="col-md-6 offset-md-3">
     
-<form (ngSubmit) = "onSubmit()">
+<form (ngSubmit) = "onUpdate()">
 
     <div class="form-group">
         <label>First Name</label>
