--- a/spring-boot-rest-api/src/app/create-student/create-student.component.html
+++ b/spring-boot-rest-api/src/app/create-student/create-student.component.html
@@ -1,29 +1,143 @@
-<p style="text-align: center;">create-student</p>
+<!-- <div class="col-md-6 offset-md-3"> -->
+<form class="form-inline" #studentForm="ngForm" (ngSubmit)="onSubmit(studentForm)">
+    <div class="card" style="margin-top: 20px;">
+        <div class="card-header">
+            <h3>Registration</h3>
+        </div>
+        <div class="card-body">
 
-<div class="col-md-6 offset-md-3">
-    
-<form (ngSubmit) = "onSubmit()">
+            <div class="card-body">
+                <div class="row">
+                    <div class="form-group col-sm">
+                        <label style="padding: 10px; padding-left: 0px;">Registration Id</label>
+                        <input type="text" class="form-control" id="regId" [(ngModel)]="student.regId" name="regId"
+                            #firstNameControl="ngModel">
+                    </div>
+                    <div class="form-group col-sm">
+                        <label style="padding: 10px;">Institution Id</label>
+                        <input type="number" class="form-control" id="institutionId" [(ngModel)]="student.institutionId"
+                            name="institutionId">
+                    </div>
+                    <div class="form-group col-sm">
+                        <label style="padding: 10px;">Student Id</label>
+                        <input type="text" class="form-control" id="studentId" [(ngModel)]="student.studentId"
+                            name="studentId">
+                    </div>
+                </div>
+            </div>
 
-    <div class="form-group">
-        <label>First Name</label>
-        <input type="text" class="form-control" id="firstName"
-            [(ngModel)] = "student.firstName" name="firstName">
+            <div class="card-body">
+                <div class="row">
+                    <div class="form-group col-sm" [class.has-error]="firstNameControl.invalid">
+                        <label for="firstName" class="contro-lebel">First Name</label>
+                        <input type="text" class="form-control" id="firstName" [(ngModel)]="student.firstName"
+                            name="firstName" #firstNameControl="ngModel">
+                        <span class="help-block" *ngIf="firstNameControl.invalid">First name is required</span>
+                    </div>
+
+                    <div class="form-group col-sm">
+                        <label>Last Name</label>
+                        <input type="text" class="form-control" id="lastName" [(ngModel)]="student.lastName"
+                            name="lastName">
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <div class="row">
+                    <div class="form-group col-sm">
+                        <label>Registration Date</label>
+                        <input type="date" class="form-control" id="regDate" [(ngModel)]="student.regDate" name="regDate">            
+                    </div>
+                    <div class="form-group col-sm">
+                        <label>Date of Birth</label>
+                        <input type="date" class="form-control" id="dateOfBirth" [(ngModel)]="student.dateOfBirth"
+                            name="dateOfBirth">            
+                    </div>
+                    <div class="form-group col-sm">
+                        <label>Age</label>
+                        <input type="text" class="form-control" id="age" [(ngModel)]="student.age" name="age">            
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <div class="row">
+                    <div class="form-group col-sm">
+                        <label>Gender</label>
+                        <div class="form-control">
+                            <label class="radio-inline">
+                                <input type="radio" value="male" name="gender" [(ngModel)]="student.gender">
+                                Male
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" value="female" name="gender" [(ngModel)]="student.gender">
+                                Female
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group col-sm">
+                        <label>NID no.</label>
+                        <input type="number" class="form-control" id="nid" [(ngModel)]="student.nid" name="nid">            
+                    </div>
+                    <div class="form-group col-sm">
+                        <label>Occupation</label>
+                        <input type="text" class="form-control" id="occupation" [(ngModel)]="student.occupation" name="occupation">            
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group card-body">
+                <label>Address</label>
+                <input type="text" class="form-control" id="address" [(ngModel)]="student.address" name="address">
+            </div>
+
+            <div class="card-body">
+                <div class="row">
+                    <div class="form-group col-sm">
+                        <label>Contact No.</label>
+                        <input type="number" class="form-control" id="contactNo" [(ngModel)]="student.contactNo" name="contactNo">            
+                    </div>
+                    <div class="form-group col-sm">
+                        <label>Email Id</label>
+                        <input type="email" class="form-control" id="emailId" [(ngModel)]="student.emailId" name="emailId">            
+                    </div>
+                    <!-- <div class="form-group col-sm">
+                        <label for="photo">Photo</label>
+                        <img src="rounded-circle" [src]="urllink" >
+                        <input type="file" class="form-control-file" id="photo" (change)="selectFiles($event)">
+                    </div> -->
+                </div>
+            </div>
+
+            <div class="card-body">
+                <div class="row">
+                    <div class="form-group col-sm">
+                        <label>Creation Date</label>
+                        <input type="email" class="form-control" id="createdOn" [(ngModel)]="student.createdOn" name="createdOn">            
+                    </div>
+                    <div class="form-group col-sm">
+                        <label>Created By</label>
+                        <input type="email" class="form-control" id="createdBy" [(ngModel)]="student.createdBy" name="createdBy">            
+                    </div>
+                    <div class="form-group col-sm">
+                        <label>Academic Qualification</label>
+                        <input type="email" class="form-control" id="academicQualifications"
+                            [(ngModel)]="student.academicQualifications" name="academicQualifications">            
+                    </div>
+                </div>
+            </div>
+            
+
+
+        </div>
+
+        <div class="card-footer">
+
+            <button class="btn btn-primary" type="submit">ADD</button>
+        </div>
+
     </div>
-
-    <div class="form-group">
-        <label>Last Name</label>
-        <input type="text" class="form-control" id="lastName"
-            [(ngModel)] = "student.lastName" name="lastName">
-    </div>
-
-    <div class="form-group">
-        <label>Email Id</label>
-        <input type="text" class="form-control" id="emailId"
-            [(ngModel)] = "student.emailId" name="emailId">
-    </div>
-
-    <button class="btn btn-success" type="submit">ADD</button>
-
 </form>
 
-</div>
+{{studentForm.value | json}}
