--- a/spring-boot-rest-api/src/app/student-list/student-list.component.html
+++ b/spring-boot-rest-api/src/app/student-list/student-list.component.html
@@ -2,19 +2,28 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th> First Name </th>
-            <th> Last Name </th>
+            <th> Image</th>
+            <th> Id </th>
+            <th> Name</th>
             <th> Email Id </th>
+            <th> Contact No.</th>
             <th> Action </th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor = "let student of students">
-            <td> {{student.firstName}} </td>
-            <td> {{student.lastName}} </td>
+        <tr *ngFor = "let student of students" (dblclick)="studentDetails(student.id)">
+            <td><img  src="assets/pic.png" alt="image" style="height: 40px; width: 40px;"/></td>
+            <td> {{student.studentId}} </td>
+            <td> {{student.firstName + " " + student.lastName}}</td>
             <td> {{student.emailId}} </td>
+            <td> {{student.contactNo}} </td>
             <td>
-                <button (click) = "updateStudent(student.id)" class="btn btn-info"> Update </button>
+                <button mat-button color="accent" (click) = "updateStudent(student.id)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-button color="warn" (click) = "deleteStudent(student.id)">
+                    <mat-icon>delete</mat-icon>
+                </button>
             </td>
         </tr>
     </tbody>
