--- a/spring-boot-rest-api/src/app/student-list/student-list.component.html
+++ b/spring-boot-rest-api/src/app/student-list/student-list.component.html
@@ -21,7 +21,7 @@
                 <button mat-button color="accent" (click) = "updateStudent(student.id)">
                     <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-button color="warn" (click) = "deleteStudent(student.id)">
+                <button mat-button color="warn" (click) = "deleteStudent(student.id, student.firstName+' '+ student.lastName + ' ?')">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
