--- a/spring-boot-rest-api/src/app/student-details/student-details.component.html
+++ b/spring-boot-rest-api/src/app/student-details/student-details.component.html
@@ -5,7 +5,7 @@
     <div class="card-body">
 
         <div class="container col-lg-3" style="align-items: center; align-content: center; align-self: center;">
-            <img src="assets/new2.png" alt="image" style="height: 100px; width: 100px;" />
+            <img src="assets/pic.png" alt="image" style="height: 100px; width: 100px;" />
         </div>
 
         <table style="margin-top: 10pt;">
@@ -66,7 +66,7 @@
             <tr>
                 <th>Address:</th>
                 <td class="right">
-                    {{student.address}}
+                    {{student.street + ", " + student.city + ", " + student.country}}
                 </td>
             </tr>
             <tr>
